# End-to-end-Sanction-screening

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.poetry-cache/artifacts/02/dd/ca/e6343ba6498af7ba91346280bfc529e257b90a29e999194cc2f149525d/: coverage-7.13.5-cp312-cp312-macosx_11_0_arm64.whl
.poetry-cache/artifacts/06/8f/0c/09b4abff86faf3dd6f04140d815ced1f406838957094ff52cb05e75495/: ujson-5.12.0-cp312-cp312-macosx_11_0_arm64.whl
alembic/: env.py
alembic/versions/: 20260410_0001_initial_schema.py
api/: main.py
app/: __init__.py
app/connectors/: base.py  blackrock.py  sanctions.py
app/core/: config.py  database.py  logging.py  utils.py
app/models/: base.py  tables.py
app/pipeline/: runner.py
app/schemas/: __init__.py  contracts.py
app/services/: __init__.py  matching.py  normalization.py  persistence.py  quality.py  query_service.py
dashboards/streamlit_app/: main.py
data/sample/: blackrock_funds.csv  blackrock_holdings.csv  eu_sanctions.csv  ofac_sdn.csv  un_sanctions.json
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/marts/: mart_entity_matches.sql  mart_fund_exposure.sql  mart_pipeline_health.sql  mart_screening_overview.sql  schema.yml
dbt/models/staging/: schema.yml  stg_raw_blackrock_funds.sql  stg_raw_blackrock_holdings.sql  stg_raw_sanctions_entities.sql
docs/: architecture.md  demo_walkthrough.md  interview_talking_points.md  screenshots.md  sources.md
docs/images_placeholder/: README.md
infra/postgres/: README.md
notebooks/: README.md
orchestration/prefect/: __init__.py  flows.py
scripts/: __init__.py  run_pipeline.py
tests/integration/: test_sample_connectors.py
tests/unit/: test_matching.py  test_normalization.py
(+14 files in other folders)
