[tool.poetry]
name = "sanctionsight"
version = "0.1.0"
description = "End-to-end sanctions screening analytics prototype for public investment funds."
authors = ["OpenAI Codex <codex@openai.com>"]
readme = "README.md"
packages = [
  { include = "app" },
  { include = "api" },
  { include = "dashboards" },
  { include = "orchestration" }
]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
polars = "^1.18.0"
sqlalchemy = "^2.0.38"
psycopg = { version = "^3.2.4", extras = ["binary"] }
alembic = "^1.14.1"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
httpx = "^0.28.1"
rapidfuzz = "^3.12.1"
prefect = "^3.1.15"
fastapi = "^0.115.8"
uvicorn = { version = "^0.34.0", extras = ["standard"] }
streamlit = "^1.43.2"
plotly = "^6.0.0"
dbt-core = "^1.9.2"
dbt-postgres = "^1.9.0"
structlog = "^25.1.0"
pandera = "^0.22.1"
python-dotenv = "^1.0.1"
orjson = "^3.10.15"
beautifulsoup4 = "^4.13.3"
lxml = "^5.3.1"
tenacity = "^9.0.0"
duckdb = "^1.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
ruff = "^0.9.7"
mypy = "^1.15.0"
types-python-dateutil = "^2.9.0.20241206"

[tool.poetry.scripts]
sanctionsight-pipeline = "scripts.run_pipeline:main"
sanctionsight-api = "api.main:run"
sanctionsight-dashboard = "dashboards.streamlit_app.main:main"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "RUF"]
ignore = ["B008", "S608"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = []
